@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150412"
-#define public MagickPackageReleaseDate "snapshot-20150412"
+#define public MagickPackageVersionAddendum ".020150413"
+#define public MagickPackageReleaseDate "snapshot-20150413"
